--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: klyushkov
 
 # Build settings
-theme: jekyll-theme-chirpy
+theme: midnight
 plugins:
   - jekyll-feed
 
