--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: klyushkov
 
 # Build settings
-theme: jekyll-midnight
+remote_theme: cotes2020/jekyll-theme-chirpy
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
